# medly-backend

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
medly_backend/api/v1/: health.py  items.py  lessons.py  papers.py  users.py
medly_backend/core/: config.py  logging.py  paths.py
medly_backend/data_importer/: course_importer.py  exam_importer.py  practice_importer.py  runner.py  user_data_importer.py  util.py
medly_backend/db/: engine.py  session.py
medly_backend/db/models/: __init__.py  course_models.py  exam_models.py  join_tables.py  provenance.py  user_models.py
medly_backend/models/: item.py  lesson.py  paper.py  user.py
medly_backend/services/: item_service.py  lesson_service.py  paper_service.py  user_service.py
migrations/: env.py
migrations/versions/: 6281c9d3d1b6_initial_schema.py
