[project]
name = "medly-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.17.2",
  "fastapi>=0.123.0",
  "orjson>=3.11.4",
  "psycopg>=3.2.13",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.12.0",
  "sqlalchemy>=2.0.44",
]

[project.scripts]
medly-backend = "medly_backend.cli:main"

[dependency-groups]
dev = [
    "freezegun>=1.5.5",
    "pytest>=9.0.1",
]
